# 2025-1B-T12-EC06-G04

./: .gitignore  README.md  gen_images.py  package-lock.json  package.json  requirements.txt  testeImagem
.github/: pull_request_template.md
.github/workflows/: deploy.yml
docs/: docusaurus.config.js  package-lock.json
docs/docs/Análise de negócio/: RNF.md
docs/docs/Sprint 1/: RF.md
docs/docs/Sprint 2/: README.md  introducao.md
docs/docs/Sprint 3/: Documentação de Pré-processamento de Imagens para Detecção de Fissuras com YOLO.md  introdução.md
docs/docs/Sprint 4/: intro.md  usabilidade.md  validacao_fissuras.md
docs/docs/Sprint-1/: _category_.json  arquitetura.md  introdução.md  personas.md  userstories.md
docs/docs/Sprint-2/: README.md  intro.md
docs/docs/Sprint-3/: intro.md
docs/docs/sprint 1/: RNF.md
docs/src/css/: custom.css
src/: CMakeLists.txt  README.md  teste_fissuras.csv
src/Testes/: a.out  testeImagem.cpp
src/YOLO-Py/runs/classify/yolo_rachaduras/: args.yaml
src/YOLO-Py/runs/classify/yolo_rachaduras/weights/: last.pt
src/Yolo/YOLO-Class-Py/: best.pt  yolo_test.py  yolo_train.py
src/Yolo/YOLO-Class-Py/runs/classify/yolo_rachaduras/: results.csv
src/Yolo/YOLO-Class-Py/runs/classify/yolo_rachaduras3/: args.yaml
src/Yolo/YOLO-Det-Py/: rodar_modelo_prod.py  yolo_train.py
src/Yolo/YOLO-Det-Py/runs/detect/predict2/labels/: 2.txt  3.txt
src/Yolo/YOLO-Det-Py/runs/detect/reclasse_v8n/: args.yaml
src/Yolo/YOLO-Det-Py/runs/detect/reclasse_v8n2/: args.yaml  results.csv
src/Yolo/YOLO-Det-Py/runs/detect/reclasse_v8n3/: args.yaml  results.csv
src/Yolo/YOLO-Det-Py/runs/detect/reclasse_v8n4/: args.yaml  results.csv
src/Yolo/YOLO-Det-Py/runs/detect/yolo_rachaduras/: results.csv
src/app-rust/: Cargo.toml  Dioxus.toml
src/app-rust/Projects/Galpão_Logístico_XPTO/: Relatorio-Galpão_Logístico_XPTO-Galpão_3.md
src/app-rust/Projects/SaletaEspetacular/: detection_results.json
src/app-rust/Report/Galpão_Logístico_XPTO/: Relatorio-Galpão_Logístico_XPTO-Galpão_3.md
src/app-rust/Report/Teste_A/: Relatorio-Teste_A-Galpão_3.md
src/app-rust/Report/Teste_novo/: Relatorio-Teste_novo-Galpão_3.md
src/app-rust/Report/asdasdasdasd/: Relatorio-asdasdasdasd-Galpão_3.md
src/app-rust/Report/hello_world/: Relatorio-hello_world-Galpão_3.md
src/app-rust/Report/sdas/: Relatorio-sdas-Galpão_3.md
src/app-rust/Report/teste/: Relatorio-teste-Galpão_3.md
src/app-rust/Report/teste_de_redirecionamento/: Relatorio-teste_de_redirecionamento-Galpão_3.md
src/app-rust/assets/: styles.css  tailwind.css
src/app-rust/src/: create_project.rs  folders.rs  generate_test_data.rs  graph.rs  home.rs  homepage.rs  image_processor.rs  main.rs  manual_processor.rs  metadata.rs  pastas.rs  report.rs  report_generator.rs  report_structures.rs  select_images.rs  select_photos.rs  teste_fissuras.csv  ui.rs  validation.rs  validation_screen.rs
src/app-rust/src/Report/: relatorio.md  report_template.md
src/app-rust/src/Template/: report_page.css  report_template.md
src/app-rust/src/Template/json/: dados.json  image_data.json  json_data_unificado.json
src/app-rust/src/examples/: example.json
src/app-rust/src/pages/: create_project.rs  graph.rs  homepage.rs  manual_processor.rs  proccess.rs  report.rs  select_images.rs
src/app-rust/src/utils/: exporter.rs  file_manager.rs  image_processing.rs  image_processor.rs  report_generator.rs
src/crack_preprocessing_cpp/: CMakeLists.txt
src/crack_preprocessing_cpp/include/: preprocess.hpp
src/crack_preprocessing_cpp/src/: preprocess.cpp
src/images/: .gitignore
src/include/: classificador.hpp  extrator_features.hpp  preprocessamento.hpp
src/model/: README.md  requirements.txt
src/model/Yolo/YOLO-Class-Py/: bs.pt
src/model/Yolo/YOLO-Class-Py/runs/classify/yolo_rachaduras3/: results.csv
src/model/Yolo/YOLO-Class-Py/runs/classify/yolo_rachaduras3/weights/: last.pt
src/model/Yolo/YOLO-Det-Py/: convertYolo.py  resultados.json  yolo_test.py
src/model/Yolo/YOLO-Det-Py/Dataset/: classes.txt  dataset.yaml
src/model/Yolo/YOLO-Det-Py/runs/detect/yolo_rachaduras/: args.yaml
src/model/cpp/Testes/: CMakeLists.txt
src/model/cpp/crack_preprocessing_cpp/src/: main.cpp
src/model/cpp/include/: detectorfissura.hpp  validacao.hpp
src/model/cpp/src/: preprocessamento.cpp  treinamentoModelo.cpp
src/src/: classificador.cpp  detectorfissura.cpp  extrator_features.cpp  main.cpp  preprocessamento.cpp  validacao.cpp
(+32 files in other folders)
