[package]
name = "file-explorer"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", workspace = true, features = ["desktop"] }
printpdf = "0.3.1"
pulldown-cmark = "0.9"
tempfile = "3.20.0"
dioxus-router = "0.6.3"
chrono = "0.4.41"
open = "3.2.0"
web-sys = { version = "0.3.77", features = ["Storage"] }
rfd = "0.12.0"
dioxus-desktop = "0.6.3"
walkdir = "2.4.0"
anyhow = "1.0"
kamadak-exif = "0.5.5"
regex = "1.11.1"
num-traits = "0.2.19"
home = "0.5.11"
futures-util = "0.3.31"

[workspace]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[workspace.dependencies]
dioxus = "0.6"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

