[package]
name = "file-explorer"
edition = "2021"
version = "0.1.0"

[dependencies]
# Dependências existentes
dioxus = { version = "0.6.0", workspace = true, features = ["desktop"] }
printpdf = "0.3.1"
pulldown-cmark = "0.9"
tempfile = "3.20.0"
dioxus-router = "0.6.3"
chrono = "0.4.41"
open = "3.2.0"
web-sys = { version = "0.3.77", features = ["Storage"] }
rfd = "0.12.0"
dioxus-desktop = "0.6.3"
walkdir = "2.4.0"
anyhow = "1.0"
kamadak-exif = "0.5.5"
regex = "1.11.1"
num-traits = "0.2.19"
home = "0.5.11"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"

# Dependências adicionais para gráficos
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"

# Para monitoramento de arquivos (opcional)
notify = "6.1"

[workspace]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[workspace.dependencies]
dioxus = "0.6"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
